<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:paddingEnd="20dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="15dp"/>


        <TextView
            android:id="@+id/titleArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="50dp"
            android:text="Archive"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
    android:id="@+id/recentsTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Recents"
    android:textSize="20sp"
    android:paddingTop="20dp"
        android:paddingBottom="20dp"
    android:textColor="@color/white"
    />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Folders"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foldersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="220dp">

    </androidx.recyclerview.widget.RecyclerView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All Maps"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/white"
                />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allMapsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="220dp">

    </androidx.recyclerview.widget.RecyclerView>





</LinearLayout>
</ScrollView>

