...
        android:layout_weight="0"
        android:tag= "2_fragment"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuButton"
        app:srcCompat="@drawable/ic_baseline_back_archive_24"
        android:layout_width= "wrap_content"
        android:layout_height= "wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
...
