...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".mapViewerView.MenuActivity">

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/archiveCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            card_view:cardBackgroundColor="@color/turquoise"
            card_view:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_rowWeight="1"
...
